...
  } else
      Scaffold(
          modifier = Modifier.testTag("ProfileScreen"),
          bottomBar = {
            Column {
...
                          }
                        },
                        Modifier.testTag("goBackButton")) {
                          Icon(
                              imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
...
                              })
                        },
                        modifier = Modifier.testTag("saveButton"),
                        enabled = saveEnabled.value) {
                          Icon(
...
                      FilterChip(
                          modifier =
                              Modifier.width(130.dp).height(40.dp).testTag("publicAccountChip"),
                          colors =
                              FilterChipDefaults.filterChipColors(
...
                      FilterChip(
                          modifier =
                              Modifier.width(130.dp).height(40.dp).testTag("privateAccountChip"),
                          colors =
                              FilterChipDefaults.filterChipColors(
...

                    Button(
                        modifier = Modifier.padding(top = 16.dp).testTag("deleteAccountButton"),
                        colors =
                            ButtonDefaults.buttonColors(
...
                          title = { Text(stringResource(R.string.delete_account)) },
                          text = { Text(stringResource(R.string.delete_account_prompt)) },
                          modifier = Modifier.testTag("deleteAccountAlert"),
                          confirmButton = {
                            Button(
                                modifier = Modifier.testTag("confirmDeleteButton"),
                                onClick = {
                                  showDeleteAccountAlert.value = false
...
                          dismissButton = {
                            Button(
                                modifier = Modifier.testTag("dismissDeleteButton"),
                                onClick = { showDeleteAccountAlert.value = false },
                                content = { Text(stringResource(R.string.no)) })
...
                          title = { Text(stringResource(R.string.discard_changes)) },
                          text = { Text(stringResource(R.string.discard_changes_text)) },
                          modifier = Modifier.testTag("goingBackAlert"),
                          confirmButton = {
                            Button(
...
                          dismissButton = {
                            Button(
                                modifier = Modifier.testTag("dismissGoingBack"),
                                onClick = { showGoingBackWithoutSavingChanges.value = false },
                                content = { Text(stringResource(R.string.no)) })
...
      onValueChange = { bioState.value = User.formatBio(it) },
      label = { Text(stringResource(R.string.biography)) },
      modifier = Modifier.fillMaxWidth(0.8f).padding(vertical = 12.dp).testTag("inputBio"))
}

...
        contentDescription = "Profile Picture",
        modifier =
            Modifier.testTag("profilePicture")
                .size(150.dp)
                .clip(CircleShape)
...
        onClick = { showSheet.value = true },
        modifier =
            Modifier.testTag("displayBottomSheet")
                .align(Alignment.BottomEnd) // Position on the bottom-left corner
                .offset(x = (0).dp, y = (-5).dp)
...
                icon = Icons.Default.Edit,
                color = MaterialTheme.colorScheme.tertiary,
                testTag = "editProfilePicture")
            Spacer(modifier = Modifier.height(16.dp))
            BottomSheetRow(
...
                icon = Icons.Default.Delete,
                color = MaterialTheme.colorScheme.tertiary,
                testTag = "removeProfilePicture")
          }
        } else {
...
              icon = Icons.Default.Add,
              color = MaterialTheme.colorScheme.tertiary,
              testTag = "addProfilePicture")
        }
      }
...
